# research_osvg

./: .gitignore  .pre-commit-config.yaml  complete_database_implementation.py  db_class.py  generated_models.py  interface.py  open_source_video_games.csv  pyproject.toml  requirements.txt  videogame_db.sqlite
osvg/: __init__.py  cli.py  db.py  db_class.py  interface.py  main.py  rawg.py  types.py
osvg/cli/: __init__.py
osvg/db/: __init__.py
src/: main.py
src/db/: __init__.py
