[project]
name = "osvg"
version = "0.0.1"
description = "Open Source Video Game Database"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com"}]
requires-python = "~=3.13"
readme = "README.md"
keywords = ["Research", "Database", "Video Games", "Open Source"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "SQLAlchemy>=2.0.0",
    "pandas>=2.3.2",
    "progress>=1.6.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/research_osvg"
Repository = "://github.com/NicholasSynovic/research_osvg"

[project.scripts]
osvg = "osvg.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
